--- a/Copia_de_Hunger_games.ipynb
+++ b/Copia_de_Hunger_games.ipynb
@@ -54,7 +54,7 @@
         "dataframe = pd.read_csv(url)\n",
         "dataframe.columns = [\"refractive_index\", \"sodium\", \"magnesium\", \"aluminum\", \"silicon\", \"potassium\", \"calcium\", \"barium\", \"iron\", \"type_of_glass\"]"
       ],
-      "execution_count": 22,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "4Dz5dnmSN7gw",
-        "outputId": "243e3886-ef2c-4912-c33e-20d3b2bada24",
+        "outputId": "5077002e-cffb-44d8-bd1f-14b8983c573d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
@@ -79,7 +79,7 @@
       "source": [
         "dataframe.head(10)"
       ],
-      "execution_count": 23,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +269,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 2
         }
       ]
     },
@@ -277,7 +277,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "KrbgsWlFrV7G",
-        "outputId": "1abfca07-fa8f-481a-fbdc-951d5f2b161f",
+        "outputId": "3eaba5d1-88fb-4001-b9d1-0832cea138d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -285,7 +285,7 @@
       "source": [
         "dataframe.shape"
       ],
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +297,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 3
         }
       ]
     },
@@ -337,14 +337,14 @@
         "from sklearn.metrics import roc_curve, roc_auc_score\n",
         "import plotly.express as px"
       ],
-      "execution_count": 33,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "iZKE_NDrf2Ix",
-        "outputId": "97e3f523-0300-4eb4-ce9a-fc1b9f3c2f89",
+        "outputId": "f8df00bf-1935-474e-e144-555a105d152a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -352,7 +352,7 @@
       "source": [
         "dataframe.dtypes"
       ],
-      "execution_count": 34,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -374,7 +374,50 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i56a0KfwreiF"
+      },
+      "source": [
+        "Let´s find out the number of each type of glass in the dataset."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e49ppUotpnAv",
+        "outputId": "bf070348-d937-4e26-cb57-13753af3a216",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dataframe[\"type_of_glass\"].value_counts()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2    76\n",
+              "1    70\n",
+              "7    29\n",
+              "3    17\n",
+              "5    13\n",
+              "6     9\n",
+              "Name: type_of_glass, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
         }
       ]
     },
@@ -384,14 +427,14 @@
         "id": "UJPEIVa4sGeX"
       },
       "source": [
-        "We use Z-score function to detect the outliers and to remove them and get the clean data."
+        "We use Z-score function to detect outliers and to remove them and get the clean data."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fvM0UZNQnYAf",
-        "outputId": "926d4f97-872a-4e2c-cd1c-358779f330ef",
+        "outputId": "12c6a135-051c-4c57-fe08-81c776748d21",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -405,7 +448,7 @@
         "df = dataframe[(z < threshold).all(axis=1)]\n",
         "df.shape"
       ],
-      "execution_count": 35,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -417,7 +460,50 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YCdFu467rtLv"
+      },
+      "source": [
+        "The number of each type of glass after eliminating outliers:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DNdmRsMPqH_m",
+        "outputId": "7442b0be-2013-4b40-c83b-df0205910c17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "df[\"type_of_glass\"].value_counts()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1    70\n",
+              "2    68\n",
+              "7    23\n",
+              "3    16\n",
+              "5     9\n",
+              "6     8\n",
+              "Name: type_of_glass, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
         }
       ]
     },
@@ -440,7 +526,7 @@
       "source": [
         "np.random.seed(123)"
       ],
-      "execution_count": 36,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -449,12 +535,12 @@
         "id": "tRjsN69SPhc7"
       },
       "source": [
-        "X = dataframe.drop(\"type_of_glass\", axis=1)\n",
-        "y = dataframe[\"type_of_glass\"]\n",
+        "X = df.drop(\"type_of_glass\", axis=1)\n",
+        "y = df[\"type_of_glass\"]\n",
         "from sklearn import preprocessing\n",
         "norm_X = preprocessing.normalize(X)"
       ],
-      "execution_count": 37,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -463,7 +549,7 @@
         "id": "iUHWRpGOQobv"
       },
       "source": [
-        "Now, let´s split the data into train and test subsets."
+        "Now, let´s split the data into train and test subsets and explore the results of different ML algorithms and find out the better one for our case."
       ]
     },
     {
@@ -473,13 +559,13 @@
       },
       "source": [
         "seed=7\n",
-        "X_train, X_test, y_train, y_test = train_test_split(norm_X, y, test_size=0.20, random_state=seed)# Feature Scaling\n",
+        "X_train, X_test, y_train, y_test = train_test_split(norm_X, y, test_size=0.30, random_state=seed)# Feature Scaling\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "sc = StandardScaler()\n",
         "X_train = sc.fit_transform(X_train)\n",
         "X_test = sc.transform(X_test)"
       ],
-      "execution_count": 38,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -511,14 +597,14 @@
         "models.append(('SVM', SVC()))\n",
         "models.append(('RF', RandomForestClassifier()))"
       ],
-      "execution_count": 43,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "6xfyftK0wzVH",
-        "outputId": "c447d2cb-e31b-4573-8edf-d3f0b14c7ca4",
+        "outputId": "19088b4d-d397-477c-d493-265a565d3e31",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -535,15 +621,11 @@
         "\tprint(\"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std()))\n",
         "\t"
       ],
-      "execution_count": 44,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
-            "\n",
-            "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
-            "\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
             "\n",
             "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
@@ -562,12 +644,12 @@
         {
           "output_type": "stream",
           "text": [
-            "LR: 0.677778 (0.130492)\n",
-            "LDA: 0.643137 (0.103681)\n",
-            "KNN: 0.659804 (0.092183)\n",
-            "CART: 0.694444 (0.123487)\n",
-            "NB: 0.351307 (0.121446)\n",
-            "SVM: 0.701307 (0.107558)\n"
+            "LR: 0.718681 (0.119669)\n",
+            "LDA: 0.681868 (0.071616)\n",
+            "KNN: 0.680220 (0.136697)\n",
+            "CART: 0.658791 (0.150000)\n",
+            "NB: 0.541758 (0.118641)\n",
+            "SVM: 0.718681 (0.123200)\n"
           ],
           "name": "stdout"
         },
@@ -585,6 +667,10 @@
             "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
             "\n",
             "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
+            "\n",
+            "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
             "\n"
           ],
           "name": "stderr"
@@ -592,7 +678,7 @@
         {
           "output_type": "stream",
           "text": [
-            "RF: 0.800000 (0.109101)\n"
+            "RF: 0.762088 (0.075339)\n"
           ],
           "name": "stdout"
         }
@@ -611,7 +697,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Pw-cvirDuViG",
-        "outputId": "29a8b136-20e4-4b62-d002-7a4090c8b544",
+        "outputId": "e8bca10e-a0da-4e8a-d49c-6ea70a8f8453",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -624,30 +710,30 @@
         "print(confusion_matrix(y_test,y_pred))\n",
         "print(classification_report(y_test,y_pred))"
       ],
-      "execution_count": 45,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.7209302325581395\n",
-            "[[ 7  1  2  0  0  0]\n",
-            " [ 4 15  1  0  1  1]\n",
-            " [ 2  0  1  0  0  0]\n",
+            "0.7796610169491526\n",
+            "[[17  1  1  0  0  0]\n",
+            " [ 6 19  0  0  1  0]\n",
+            " [ 3  0  2  0  0  0]\n",
             " [ 0  0  0  2  0  0]\n",
             " [ 0  0  0  0  1  0]\n",
-            " [ 0  0  0  0  0  5]]\n",
+            " [ 1  0  0  0  0  5]]\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           1       0.54      0.70      0.61        10\n",
-            "           2       0.94      0.68      0.79        22\n",
-            "           3       0.25      0.33      0.29         3\n",
+            "           1       0.63      0.89      0.74        19\n",
+            "           2       0.95      0.73      0.83        26\n",
+            "           3       0.67      0.40      0.50         5\n",
             "           5       1.00      1.00      1.00         2\n",
             "           6       0.50      1.00      0.67         1\n",
-            "           7       0.83      1.00      0.91         5\n",
+            "           7       1.00      0.83      0.91         6\n",
             "\n",
-            "    accuracy                           0.72        43\n",
-            "   macro avg       0.68      0.79      0.71        43\n",
-            "weighted avg       0.78      0.72      0.73        43\n",
+            "    accuracy                           0.78        59\n",
+            "   macro avg       0.79      0.81      0.77        59\n",
+            "weighted avg       0.82      0.78      0.78        59\n",
             "\n"
           ],
           "name": "stdout"
@@ -655,60 +741,38 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v6MT8p1kt00R"
+      },
+      "source": [
+        "We can evaluate the performance of the model using Balanced accuracy score and F1 score metrics:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "scjtydS-yaTv",
-        "outputId": "81edf936-0788-44ec-aba3-9152059e461c",
+        "outputId": "f1d0be60-41d1-4ca4-9d39-ce8ffbf532d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "from sklearn.metrics import balanced_accuracy_score\n",
-        "balanced_accuracy_score(y_test, y_pred)"
-      ],
-      "execution_count": 46,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.7858585858585858"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 46
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PWhaikX93Js8",
-        "outputId": "1d5cb235-41a0-4686-c11d-13049e163b6b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
         "from sklearn.metrics import f1_score\n",
-        "f1_score(y_test, y_pred, average='micro')"
+        "print(\"Balanced accuracy score:\", balanced_accuracy_score(y_test, y_pred))\n",
+        "print(\"F1 Score:\", f1_score(y_test, y_pred, average='micro'))"
       ],
-      "execution_count": 47,
+      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.7209302325581395"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 47
+          "output_type": "stream",
+          "text": [
+            "Balanced accuracy score: 0.8098065677013045\n",
+            "F1 Score: 0.7796610169491526\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -718,7 +782,7 @@
         "id": "0daS0Qk5ndJP"
       },
       "source": [
-        "Building a bagging estimator."
+        "Now, let´s try to build a bagging estimator in order to improve the results."
       ]
     },
     {
@@ -731,14 +795,14 @@
         "base_estimator = RandomForestClassifier(random_state=seed, criterion=\"entropy\")\n",
         "model = BaggingClassifier(base_estimator, n_estimators=500, max_samples=50, max_features=5)"
       ],
-      "execution_count": 97,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "AaLq90Xumja4",
-        "outputId": "70b007d4-a974-46c9-ec20-2573540103f7",
+        "outputId": "36a977be-fe1f-4e98-8289-41b53c057ce9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -746,7 +810,7 @@
       "source": [
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 98,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -780,7 +844,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 98
+          "execution_count": 25
         }
       ]
     },
@@ -788,7 +852,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "HNQDhw7Smjgi",
-        "outputId": "24ab6a56-e62a-4187-d649-b912d47c5d08",
+        "outputId": "db8ec5f4-3422-40a7-fdfc-a7c85ece5a8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -796,19 +860,19 @@
       "source": [
         "model.score(X_test, y_test)"
       ],
-      "execution_count": 99,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6744186046511628"
+              "0.711864406779661"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 99
+          "execution_count": 26
         }
       ]
     },
@@ -816,7 +880,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Bn3msq56oIBr",
-        "outputId": "bc3573a9-42bb-4d5a-efcb-9f5e8150b14d",
+        "outputId": "fb506cea-39ab-414d-c102-1a072e0b0eeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -824,7 +888,7 @@
       "source": [
         "base_estimator.fit(X_train, y_train)"
       ],
-      "execution_count": 100,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -843,7 +907,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 100
+          "execution_count": 27
         }
       ]
     },
@@ -851,7 +915,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "4tzLpvxnoKtQ",
-        "outputId": "a5e0cc70-5cd9-485d-e386-d945912126fe",
+        "outputId": "c50a9273-4746-4e36-9435-cbf4d397ef2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -859,19 +923,19 @@
       "source": [
         "base_estimator.score(X_test, y_test)"
       ],
-      "execution_count": 101,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6976744186046512"
+              "0.7457627118644068"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 101
+          "execution_count": 28
         }
       ]
     },
