--- a/Copia_de_Hunger_games.ipynb
+++ b/Copia_de_Hunger_games.ipynb
@@ -54,7 +54,7 @@
         "dataframe = pd.read_csv(url)\n",
         "dataframe.columns = [\"refractive_index\", \"sodium\", \"magnesium\", \"aluminum\", \"silicon\", \"potassium\", \"calcium\", \"barium\", \"iron\", \"type_of_glass\"]"
       ],
-      "execution_count": 1,
+      "execution_count": 144,
       "outputs": []
     },
     {
@@ -70,16 +70,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "4Dz5dnmSN7gw",
-        "outputId": "5077002e-cffb-44d8-bd1f-14b8983c573d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "outputId": "511d5868-b7ec-43b5-cfec-46e52fe60959"
       },
       "source": [
         "dataframe.head(10)"
       ],
-      "execution_count": 2,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +269,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 145
         }
       ]
     },
@@ -277,15 +277,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "KrbgsWlFrV7G",
-        "outputId": "3eaba5d1-88fb-4001-b9d1-0832cea138d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f5ff1ebf-f45b-4bbd-946a-908afc33ab5b"
       },
       "source": [
         "dataframe.shape"
       ],
-      "execution_count": 3,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +297,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 146
         }
       ]
     },
@@ -337,22 +337,22 @@
         "from sklearn.metrics import roc_curve, roc_auc_score\n",
         "import plotly.express as px"
       ],
-      "execution_count": 13,
+      "execution_count": 147,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "iZKE_NDrf2Ix",
-        "outputId": "f8df00bf-1935-474e-e144-555a105d152a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a99b3934-a10c-4003-d99c-0b2188a2e133"
       },
       "source": [
         "dataframe.dtypes"
       ],
-      "execution_count": 14,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -374,7 +374,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 148
         }
       ]
     },
@@ -391,15 +391,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "e49ppUotpnAv",
-        "outputId": "bf070348-d937-4e26-cb57-13753af3a216",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "75f09cdc-3614-483c-8add-04801aa5cceb"
       },
       "source": [
         "dataframe[\"type_of_glass\"].value_counts()"
       ],
-      "execution_count": 7,
+      "execution_count": 149,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -417,7 +417,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 149
         }
       ]
     },
@@ -434,10 +434,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "fvM0UZNQnYAf",
-        "outputId": "12c6a135-051c-4c57-fe08-81c776748d21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6789865b-6562-44fd-8f12-a4fc9d8f9316"
       },
       "source": [
         "from scipy import stats\n",
@@ -448,7 +448,7 @@
         "df = dataframe[(z < threshold).all(axis=1)]\n",
         "df.shape"
       ],
-      "execution_count": 8,
+      "execution_count": 150,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,7 +460,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 150
         }
       ]
     },
@@ -477,15 +477,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "DNdmRsMPqH_m",
-        "outputId": "7442b0be-2013-4b40-c83b-df0205910c17",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "451ff11e-e3d6-4ce1-8474-7ada4146ed65"
       },
       "source": [
         "df[\"type_of_glass\"].value_counts()"
       ],
-      "execution_count": 9,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -503,7 +503,77 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 151
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lGzZkjZYL92Z",
+        "outputId": "0e8cb290-1627-4aaf-e068-2ae1b673c1e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "out = dataframe[\"type_of_glass\"].value_counts() - df[\"type_of_glass\"].value_counts()\n",
+        "out"
+      ],
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1    0\n",
+              "2    8\n",
+              "3    1\n",
+              "5    4\n",
+              "6    1\n",
+              "7    6\n",
+              "Name: type_of_glass, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 159
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LXkSW49DMQCf",
+        "outputId": "afc11e8c-b13b-4ad9-c8b6-ca3c36195f38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "out_perc = round(out/dataframe[\"type_of_glass\"].value_counts()*100, 0)\n",
+        "out_perc"
+      ],
+      "execution_count": 163,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1     0.0\n",
+              "2    11.0\n",
+              "3     6.0\n",
+              "5    31.0\n",
+              "6    11.0\n",
+              "7    21.0\n",
+              "Name: type_of_glass, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 163
         }
       ]
     },
@@ -526,7 +596,7 @@
       "source": [
         "np.random.seed(123)"
       ],
-      "execution_count": 10,
+      "execution_count": 152,
       "outputs": []
     },
     {
@@ -540,7 +610,7 @@
         "from sklearn import preprocessing\n",
         "norm_X = preprocessing.normalize(X)"
       ],
-      "execution_count": 11,
+      "execution_count": 153,
       "outputs": []
     },
     {
@@ -559,13 +629,13 @@
       },
       "source": [
         "seed=7\n",
-        "X_train, X_test, y_train, y_test = train_test_split(norm_X, y, test_size=0.30, random_state=seed)# Feature Scaling\n",
+        "X_train, X_test, y_train, y_test = train_test_split(norm_X, y, test_size=0.20, random_state=seed, stratify=y)# Feature Scaling\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "sc = StandardScaler()\n",
         "X_train = sc.fit_transform(X_train)\n",
         "X_test = sc.transform(X_test)"
       ],
-      "execution_count": 18,
+      "execution_count": 154,
       "outputs": []
     },
     {
@@ -597,17 +667,17 @@
         "models.append(('SVM', SVC()))\n",
         "models.append(('RF', RandomForestClassifier()))"
       ],
-      "execution_count": 19,
+      "execution_count": 155,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "6xfyftK0wzVH",
-        "outputId": "19088b4d-d397-477c-d493-265a565d3e31",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "13810e79-0acc-4ebf-9b9b-80c85c8fe464"
       },
       "source": [
         "results = []\n",
@@ -621,11 +691,15 @@
         "\tprint(\"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std()))\n",
         "\t"
       ],
-      "execution_count": 20,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
+            "\n",
+            "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
+            "\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
             "\n",
             "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
@@ -644,12 +718,12 @@
         {
           "output_type": "stream",
           "text": [
-            "LR: 0.718681 (0.119669)\n",
-            "LDA: 0.681868 (0.071616)\n",
-            "KNN: 0.680220 (0.136697)\n",
-            "CART: 0.658791 (0.150000)\n",
-            "NB: 0.541758 (0.118641)\n",
-            "SVM: 0.718681 (0.123200)\n"
+            "LR: 0.657917 (0.130722)\n",
+            "LDA: 0.652083 (0.147305)\n",
+            "KNN: 0.613750 (0.137980)\n",
+            "CART: 0.606667 (0.098921)\n",
+            "NB: 0.303333 (0.098316)\n",
+            "SVM: 0.646250 (0.138500)\n"
           ],
           "name": "stdout"
         },
@@ -667,10 +741,6 @@
             "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
             "\n",
             "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
-            "\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning:\n",
-            "\n",
-            "Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
             "\n"
           ],
           "name": "stderr"
@@ -678,7 +748,7 @@
         {
           "output_type": "stream",
           "text": [
-            "RF: 0.762088 (0.075339)\n"
+            "RF: 0.690833 (0.152534)\n"
           ],
           "name": "stdout"
         }
@@ -697,10 +767,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Pw-cvirDuViG",
-        "outputId": "e8bca10e-a0da-4e8a-d49c-6ea70a8f8453",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a8580c12-f2cc-4391-ce28-1c18d903bf98"
       },
       "source": [
         "cls = RandomForestClassifier(random_state=seed, n_estimators=500, criterion=\"entropy\")\n",
@@ -710,33 +780,43 @@
         "print(confusion_matrix(y_test,y_pred))\n",
         "print(classification_report(y_test,y_pred))"
       ],
-      "execution_count": 21,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.7796610169491526\n",
-            "[[17  1  1  0  0  0]\n",
-            " [ 6 19  0  0  1  0]\n",
-            " [ 3  0  2  0  0  0]\n",
+            "0.8205128205128205\n",
+            "[[12  2  0  0  0  0]\n",
+            " [ 1 12  0  0  0  1]\n",
+            " [ 3  0  0  0  0  0]\n",
             " [ 0  0  0  2  0  0]\n",
             " [ 0  0  0  0  1  0]\n",
-            " [ 1  0  0  0  0  5]]\n",
+            " [ 0  0  0  0  0  5]]\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           1       0.63      0.89      0.74        19\n",
-            "           2       0.95      0.73      0.83        26\n",
-            "           3       0.67      0.40      0.50         5\n",
+            "           1       0.75      0.86      0.80        14\n",
+            "           2       0.86      0.86      0.86        14\n",
+            "           3       0.00      0.00      0.00         3\n",
             "           5       1.00      1.00      1.00         2\n",
-            "           6       0.50      1.00      0.67         1\n",
-            "           7       1.00      0.83      0.91         6\n",
+            "           6       1.00      1.00      1.00         1\n",
+            "           7       0.83      1.00      0.91         5\n",
             "\n",
-            "    accuracy                           0.78        59\n",
-            "   macro avg       0.79      0.81      0.77        59\n",
-            "weighted avg       0.82      0.78      0.78        59\n",
+            "    accuracy                           0.82        39\n",
+            "   macro avg       0.74      0.79      0.76        39\n",
+            "weighted avg       0.76      0.82      0.79        39\n",
             "\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning:\n",
+            "\n",
+            "Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "\n"
+          ],
+          "name": "stderr"
         }
       ]
     },
@@ -753,10 +833,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "scjtydS-yaTv",
-        "outputId": "f1d0be60-41d1-4ca4-9d39-ce8ffbf532d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "250a4e9f-fb58-45f9-df5f-69f499f2a1c9"
       },
       "source": [
         "from sklearn.metrics import balanced_accuracy_score\n",
@@ -764,13 +844,13 @@
         "print(\"Balanced accuracy score:\", balanced_accuracy_score(y_test, y_pred))\n",
         "print(\"F1 Score:\", f1_score(y_test, y_pred, average='micro'))"
       ],
-      "execution_count": 31,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Balanced accuracy score: 0.8098065677013045\n",
-            "F1 Score: 0.7796610169491526\n"
+            "Balanced accuracy score: 0.7857142857142857\n",
+            "F1 Score: 0.8205128205128205\n"
           ],
           "name": "stdout"
         }
@@ -795,22 +875,22 @@
         "base_estimator = RandomForestClassifier(random_state=seed, criterion=\"entropy\")\n",
         "model = BaggingClassifier(base_estimator, n_estimators=500, max_samples=50, max_features=5)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "AaLq90Xumja4",
-        "outputId": "36a977be-fe1f-4e98-8289-41b53c057ce9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "36a977be-fe1f-4e98-8289-41b53c057ce9"
       },
       "source": [
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -852,15 +932,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "HNQDhw7Smjgi",
-        "outputId": "db8ec5f4-3422-40a7-fdfc-a7c85ece5a8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "db8ec5f4-3422-40a7-fdfc-a7c85ece5a8b"
       },
       "source": [
         "model.score(X_test, y_test)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -880,15 +960,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Bn3msq56oIBr",
-        "outputId": "fb506cea-39ab-414d-c102-1a072e0b0eeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fb506cea-39ab-414d-c102-1a072e0b0eeb"
       },
       "source": [
         "base_estimator.fit(X_train, y_train)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -915,15 +995,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "4tzLpvxnoKtQ",
-        "outputId": "c50a9273-4746-4e36-9435-cbf4d397ef2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c50a9273-4746-4e36-9435-cbf4d397ef2c"
       },
       "source": [
         "base_estimator.score(X_test, y_test)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
